infrastructure/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
  hostnames:
    - "navidrome.k8s.benrachmiel.org"
  rules:
    - backendRefs:
        - name: navidrome
          port: 4533
